# HardenedShell

./: .editorconfig  CMakeLists.txt  README.md  TC-mingw.cmake
src/: main.cc  main.cpp  meterpreter.h  sandbox.cc  sandbox.h  target.cc  target.h
